--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/Karolina31415/frontend_levelup_2020/issues"
   },
-  "homepage": "https://github.com/Karolina31415/frontend_levelup_2020#readme"
+  "homepage": "https://github.com/Karolina31415/frontend_levelup_2020#readme",
+  "dependencies": {
+    "package": "^1.0.1"
+  }
 }
