--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
     "babel-loader": "^8.1.0"
-  }
+  },
+  "browserslist": [
+    "defaults"
+  ]
 }
